--- a/frontend/src/components/Navbar/styles.css
+++ b/frontend/src/components/Navbar/styles.css
@@ -1,5 +1,13 @@
 .navbar {
   width: 100%;
+  height: 68px;
   background-color: #FFC700;
   display: flex;
+}
+
+.navbar-logo {
+  font-weight: 700;
+  font-size: 24px;
+  margin-left: 49px;
+  margin-top: 18px;
 }
