--- a/frontend/src/core/components/Navbar/styles.css
+++ b/frontend/src/core/components/Navbar/styles.css
@@ -22,10 +22,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 .navbar-logout-text {
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
+}
+
+.display-none {
+  display: none;
 }
