--- a/frontend/src/core/assets/css/styles.css
+++ b/frontend/src/core/assets/css/styles.css
@@ -5,3 +5,8 @@ body {
   background-color: #525252;
 }
 
+.card-container-shadow {
+  background: #6c6c6c;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+}
