--- a/frontend/src/core/components/Navbar/styles.css
+++ b/frontend/src/core/components/Navbar/styles.css
@@ -7,10 +7,11 @@
   align-items: center;
 }
 
-.navbar-logo {
+.navbar-logo h1{
   font-weight: 700;
   font-size: 24px;
   margin-left: 40px;
+  color: #000;
 }
 
 .navbar-logout {
